--- a/index.html
+++ b/index.html
@@ -141,9 +141,10 @@
             margin: 20px 0;
             text-align: center;
             min-height: 250px; /* للـ responsive */
+            background: var(--container-bg); /* تتكيف مع الدارك مود */
         }
         body.dark .adsbygoogle {
-            background: var(--container-bg); /* تتكيف مع الدارك مود */
+            background: var(--container-bg);
         }
 
         @media (max-width: 768px) {
@@ -201,7 +202,7 @@
                 <ins class="adsbygoogle"
                      style="display:block"
                      data-ad-client="ca-pub-2609071667371255"
-                     data-ad-slot="YOUR_SLOT_ID_HERE"  <!-- غير هذا برقم الـ slot من AdSense -->
+                     data-ad-slot="YOUR_SLOT_ID_HERE"
                      data-ad-format="auto"
                      data-full-width-responsive="true"></ins>
                 <script>
@@ -215,4 +216,22 @@
                     <div id="basics-ar" class="arabic">
                         <p>قبل أن نبدأ في لغة برمجة، دعنا نفهم الأساسيات. البرمجة تعتمد على المنطق والحلول للمشكلات. سنتعلم كيفية التفكير مثل المبرمج.</p>
                         <h3>ما هي الخوارزمية؟ - What is an Algorithm?</h3>
-                        <p>الخوارزمية هي خطوات منطق
+                        <p>الخوارزمية هي خطوات منطقية لحل مشكلة، مثل وصفة طبخ. مثال: لصنع شاي، 1. اغلي الماء، 2. أضف الشاي، إلخ.</p>
+                        <img src="https://images.unsplash.com/photo-1551288049-bebda4e38f71?ixlib=rb-4.0.3&auto=format&fit=crop&w=1000&q=80" alt="تدفقية (Flowchart) لخوارزمية بسيطة" class="educational-image">
+                        <h3>أنواع البيانات - Data Types</h3>
+                        <p>الأرقام (Numbers): <code>5</code> أو <code>3.14</code>. النصوص (Strings): <code>"مرحبا"</code>. المنطقي (Boolean): <code>True</code> أو <code>False</code>.</p>
+                    </div>
+                    <div id="basics-en" class="english" style="display: none;">
+                        <p>Before diving into a programming language, let's understand the basics. Programming relies on logic and problem-solving. We'll learn to think like a programmer.</p>
+                        <h3>What is an Algorithm?</h3>
+                        <p>An algorithm is a set of logical steps to solve a problem, like a cooking recipe. Example: To make tea, 1. Boil water, 2. Add tea, etc.</p>
+                        <img src="https://images.unsplash.com/photo-1551288049-bebda4e38f71?ixlib=rb-4.0.3&auto=format&fit=crop&w=1000&q=80" alt="Simple flowchart for an algorithm" class="educational-image">
+                        <h3>Data Types</h3>
+                        <p>Numbers: <code>5</code> or <code>3.14</code>. Strings: <code>"Hello"</code>. Boolean: <code>True</code> or <code>False</code>.</p>
+                    </div>
+                </div>
+            </section>
+
+            <section id="python" class="section">
+                <h2>تعلم بايثون - Learning Python</h2>
+                <p>بايثون هي لغة برمجة سهلة للمبتدئين. سن
