--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2609071667371255"
+     crossorigin="anonymous"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>تعلم البرمجة للمبتدئين - Programming for Beginners</title>
@@ -536,3 +538,4 @@ document.addEventListener('DOMContentLoaded', function() {
 
 </body>
 </html>
+
