--- a/index.html
+++ b/index.html
@@ -137,6 +137,8 @@
             nav a { display: block; margin: 6px 0; }
         }
     </style>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2609071667371255"
+     crossorigin="anonymous"></script>
 </head>
 <body>
 
@@ -538,4 +540,5 @@ document.addEventListener('DOMContentLoaded', function() {
 
 </body>
 </html>
+
 
